classDiagram
    class Ville {
        +String id
        +String nom
        +String region
        +Float latitude
        +Float longitude
        +Int altitude
        +String fuseauHoraire
        +bool estCotiere
        +fromMap(Map) Ville
        +toMap() Map
    }
    
    class Prevision {
        +String id
        +String villeId
        +DateTime dateHeure
        +Float temperature
        +Float temperatureRessentie
        +String condition
        +Float humidite
        +Float vitesseVent
        +String directionVent
        +Float probabilitePluie
        +Float indiceUV
        +String icone
        +DateTime dateCreation
        +estExpiree() bool
        +fromMap(Map) Prevision
        +toMap() Map
    }
    
    class ConditionMarine {
        +String id
        +String villeId
        +Float hauteurVagues
        +Float temperatureEau
        +String etatMaree
        +String ventMarin
        +Float houle
        +bool baignadeDangereuse
        +bool pechePossible
        +fromMap(Map) ConditionMarine
        +toMap() Map
    }
    
    class Utilisateur {
        +String id
        +String pseudo
        +String languePreferee
        +String typeUtilisateur
        +bool alertesCycloneActivees
        +bool alertesPluieActivees
        +fromMap(Map) Utilisateur
        +toMap() Map
    }
    
    class Favori {
        +String id
        +String utilisateurId
        +String villeId
        +String surnom
        +bool notificationsActives
        +int ordreAffichage
        +DateTime dateAjout
        +fromMap(Map) Favori
        +toMap() Map
    }
    
    class AlerteCyclone {
        +String id
        +String nomCyclone
        +String niveau
        +DateTime dateEmission
        +DateTime dateFinPrevue
        +String consignes
        +bool estActive
        +fromMap(Map) AlerteCyclone
        +toMap() Map
    }
    
    class AlerteRegion {
        +String alerteId
        +String region
        +fromMap(Map) AlerteRegion
        +toMap() Map
    }
    
    class CalendrierCultural {
        +String id
        +String region
        +String typeCulture
        +int moisSemisDebut
        +int moisSemisFin
        +int moisRecolteDebut
        +int moisRecolteFin
        +String conseilsMeteo
        +fromMap(Map) CalendrierCultural
        +toMap() Map
    }
    
    class NotificationLocale {
        +String id
        +String titre
        +String message
        +String type
        +DateTime dateEnvoi
        +bool estLue
        +String villeConcernee
        +fromMap(Map) NotificationLocale
        +toMap() Map
    }
    
    Ville "1" --> "*" Prevision : stocke
    Ville "1" --> "0..1" ConditionMarine : a si côtière
    Utilisateur "1" --> "*" Favori : possède
    Favori "*" --> "1" Ville : référence
    AlerteCyclone "1" --> "*" AlerteRegion : concerne
    Utilisateur "1" --> "*" NotificationLocale : reçoit